--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "accessible-astro-starter",
-  "description": "An Accessible Starter Theme for Astro including several accessibility features and tools to help you build faster.",
-  "version": "3.1.2",
-  "author": "Mark Teekman",
-  "homepage": "https://accessible-astro.netlify.app/",
+  "name": "the-print-crew",
+  "description": "A community for screen printers.",
+  "version": "1.0",
+  "author": "Jesse Poteet",
+  "homepage": "https://theprintcrew.com",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
